--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,81 @@ body {
   font-family: "Inter", serif;
   font-optical-sizing: auto;
 }
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slide-up {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@keyframes expand-from-center {
+  from {
+    clip-path: inset(0 49.5% 0 49.5%);
+  }
+
+  to {
+    clip-path: inset(0 0 0 0);
+  }
+}
+
+.fade-in {
+  animation: fade-in 0.5s ease-in-out;
+}
+
+.fade-in1 {
+  animation: fade-in 1s ease-in-out;
+}
+
+.fade-in2 {
+  animation: fade-in 1.5s ease-in-out;
+}
+
+.fade-in3 {
+  animation: fade-in 2s ease-in-out;
+}
+
+.slide-up {
+  animation: slide-up 0.4s ease-in-out;
+}
+
+.slide-up1 {
+  animation: slide-up 0.5s ease-in-out;
+}
+
+.slide-up2 {
+  animation: slide-up 0.6s ease-in-out;
+}
+
+.slide-up3 {
+  animation: slide-up 0.7s ease-in-out;
+}
+
+.expand-from-center1 {
+  animation: expand-from-center 0.5s cubic-bezier(0.4, 0, 0.9, 0.3) forwards;
+}
+
+.expand-from-center2 {
+  animation: expand-from-center 0.5s cubic-bezier(0.4, 0, 0.9, 0.3) forwards;
+  animation-delay: 0.1s;
+}
+
+.expand-from-center3 {
+  animation: expand-from-center 0.5s cubic-bezier(0.4, 0, 0.9, 0.3) forwards;
+  animation-delay: 0.2s;
+}
